# whisper_research

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  run_fast_training.sh  select_gpu_and_train.sh
configs/: evaluation_config.yaml  model_config.yaml  training_config.yaml
scripts/: 01_extract_decoder.py  01_extract_decoder_openai.py  02_prepare_data.py  03_train_decoder.py  04_integrate_decoder.py  05_evaluate.py  README.md
src/: __init__.py
src/data/: __init__.py  dataset_loader.py  preprocessing.py
src/evaluation/: __init__.py  asr_evaluation.py  metrics.py
src/model/: __init__.py  decoder_extractor.py  decoder_trainer.py  model_integration.py
